fix(styling): spacing

--- a/styles/components/_heroHome.scss
+++ b/styles/components/_heroHome.scss
@@ -1,7 +1,9 @@
 .hero {
 	margin-bottom: 0;
+	margin-top: 0;
 	section {
 		margin-bottom: 0;
+		margin-top: rem(15);
 		.container-sm {
 			> div {
 				div {
@@ -14,6 +16,7 @@
 						width: 60%;
 					}
 					p {
+						margin: unset;
 						width: 75%;
 						text-align: center;
 						@media (min-width: $from-small) {
